--- a/sass/base/_card-set.scss
+++ b/sass/base/_card-set.scss
@@ -1,38 +1,38 @@
 /* сітка для колекції з елементів */
 
-.grid {
-  display: flex;
-  flex-wrap: wrap;
+// .grid {
+//   display: flex;
+//   flex-wrap: wrap;
 
-  gap: var(--indent);
-}
+//   gap: var(--indent);
+// }
 
-.grid-item {
-  flex-basis: calc((100% - var(--indent) * (var(--items) - 1)) / var(--items));
-}
+// .grid-item {
+//   flex-basis: calc((100% - var(--indent) * (var(--items) - 1)) / var(--items));
+// }
 
 // advantages
 
-.advantages-list .item {
-  --items: 4;
-}
+// .advantages-list .item {
+//   --items: 4;
+// }
 
 // directions
 
-.direction-list .item {
-  --items: 3;
-}
+// .direction-list .item {
+//   --items: 3;
+// }
 
 // team
 
-.team .item {
-  --items: 4;
-}
+// .team .item {
+//   --items: 4;
+// }
 
 // portfolio
 
-.portfolio-direction {
-  --items: 3;
+// .portfolio-direction {
+//   --items: 3;
 
-  background: var(--primary-white-color);
-}
+//   background: var(--primary-white-color);
+// }
