--- a/sass/layouts/_directions.scss
+++ b/sass/layouts/_directions.scss
@@ -1,11 +1,14 @@
 /* напрямки діяльності */
-.directions {
+.section-directions {
   @include mq(mobile) {
     display: none;
   }
   @include mq(desctop) {
     display: block;
   }
+}
+
+.directions {
   &__list {
     display: flex;
   }
