--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -12,6 +12,7 @@ body {
 /* section */
 
 .section {
+  outline: 1px solid tomato;
   @include mq(mobile) {
     margin-top: 60px;
     margin-bottom: 60px;
@@ -23,6 +24,10 @@ body {
   }
 
   &__title {
+    @include mq(mobile) {
+      margin-bottom: 30px;
+    }
+
     margin-top: 0;
     margin-bottom: 50px;
     text-align: center;
@@ -32,5 +37,16 @@ body {
     letter-spacing: 1.08px;
 
     color: var(--title-text-color);
+  }
+}
+
+.section__title--distance {
+  @include mq(mobile) {
+    padding-top: 60px;
+    margin-bottom: 30px;
+  }
+  @include mq(desctop) {
+    padding-top: 94px;
+    margin-bottom: 60px;
   }
 }
