--- a/sass/layouts/_advantages.scss
+++ b/sass/layouts/_advantages.scss
@@ -1,7 +1,8 @@
 /*  advantages  */
 
 .advantages-list {
-  // padding-bottom: 0;
+  margin: 0 -15px;
+
   @include mq(mobile-only) {
     display: block;
   }
@@ -9,9 +10,6 @@
     display: flex;
     flex-wrap: wrap;
   }
-
-  // margin: -15px -15px 60px;
-  margin: -15px;
 
   &__title {
     margin-top: 0;
@@ -51,6 +49,10 @@
   @include mq(tablet) {
     flex-basis: calc((100% - 60px) / 2);
     margin: 0 15px 30px;
+
+    &:nth-last-child(-n + 2) {
+      margin: 0 15px;
+    }
   }
 
   @include mq(desctop) {
