--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -2,29 +2,59 @@
 
 .team {
   background-color: #f5f4fa;
+}
 
-  &__list {
-    display: flex;
+.team__list {
+  margin: 0 -15px;
+  & {
+    @include mq(mobile-only) {
+      display: block;
+    }
+    @include mq(tablet) {
+      display: flex;
+      flex-wrap: wrap;
+    }
   }
 }
 
 .team__member {
-  flex-basis: calc((100% - 90px) / 4);
+  @include mq(mobile) {
+    width: 450px;
+    margin-bottom: 30px;
+  }
+
+  @include mq(tablet) {
+    flex-basis: calc((100% - 60px) / 2);
+    margin: 0 15px 30px;
+
+    &:nth-last-child(-n + 2) {
+      margin: 0 15px;
+    }
+  }
+
+  @include mq(desctop) {
+    flex-basis: calc((100% - 120px) / 4);
+    margin: 0 15px;
+  }
+
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 
   background: var(--primary-white-color);
-
-  &:not(:first-child) {
-    margin-left: 30px;
-  }
 }
 
 .member {
   &__group {
     padding-top: 30px;
-    padding-bottom: 30px;
+
+    @include mq(tablet) {
+      padding-bottom: 24px;
+    }
+
+    @include mq(desctop) {
+      padding-bottom: 30px;
+    }
   }
 
   &__title {
