змінює секцію clients and footer

--- a/sass/layouts/_directions.scss
+++ b/sass/layouts/_directions.scss
@@ -1,8 +1,9 @@
 /* напрямки діяльності */
 .section-directions {
-  @include mq(mobile) {
+  @media screen and (max-width: (1200px - 0.02)) {
     display: none;
   }
+
   @include mq(desctop) {
     display: block;
   }
