--- a/css/main.css
+++ b/css/main.css
@@ -50,7 +50,6 @@ body {
 
 /* section */
 .section {
-  outline: 1px solid tomato;
   margin-top: 60px;
   margin-bottom: 60px;
   margin-top: 94px;
@@ -86,21 +85,17 @@ body {
 }
 
 .section__title--distance {
-  padding-top: 60px;
   margin-bottom: 30px;
-  padding-top: 94px;
-  margin-bottom: 60px;
+  margin-bottom: 50px;
 }
 @media screen and (min-width: 480px) {
   .section__title--distance {
-    padding-top: 60px;
     margin-bottom: 30px;
   }
 }
 @media screen and (min-width: 1200px) {
   .section__title--distance {
-    padding-top: 94px;
-    margin-bottom: 60px;
+    margin-bottom: 50px;
   }
 }
 
@@ -316,7 +311,7 @@ p {
   padding-left: 5px;
 }
 .subscribe-btn__icon {
-  margin-left: 10px;
+  margin-left: 9px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -441,6 +436,22 @@ p {
 .logo__footer {
   display: inline-block;
   margin-bottom: 20px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-left: 0;
+  margin-right: 0;
+}
+@media screen and (min-width: 480px) {
+  .logo__footer {
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .logo__footer {
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
 
 .logo__text--black {
@@ -722,30 +733,45 @@ p {
 }
 
 /*  advantages  */
-.advantages-list {
-  margin: 0 -15px;
-  display: block;
+.advantages__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  margin: -15px;
 }
-@media screen and (max-width: 767.98px) {
-  .advantages-list {
-    display: block;
+
+.advantages__item {
+  -ms-flex-preferred-size: calc((100% - 30px) / 1);
+      flex-basis: calc((100% - 30px) / 1);
+  margin: 15px;
+  -ms-flex-preferred-size: calc((100% - 60px) / 2);
+      flex-basis: calc((100% - 60px) / 2);
+  -ms-flex-preferred-size: calc((100% - 120px) / 4);
+      flex-basis: calc((100% - 120px) / 4);
+}
+@media screen and (min-width: 480px) {
+  .advantages__item {
+    -ms-flex-preferred-size: calc((100% - 30px) / 1);
+        flex-basis: calc((100% - 30px) / 1);
+    margin: 15px;
   }
 }
 @media screen and (min-width: 768px) {
-  .advantages-list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+  .advantages__item {
+    -ms-flex-preferred-size: calc((100% - 60px) / 2);
+        flex-basis: calc((100% - 60px) / 2);
   }
 }
-.advantages-list__title {
+@media screen and (min-width: 1200px) {
+  .advantages__item {
+    -ms-flex-preferred-size: calc((100% - 120px) / 4);
+        flex-basis: calc((100% - 120px) / 4);
+  }
+}
+
+.advantages__title {
   margin-top: 0;
   margin-bottom: 10px;
   font-size: 14px;
@@ -757,11 +783,11 @@ p {
   text-transform: uppercase;
 }
 @media screen and (max-width: 767.98px) {
-  .advantages-list__title {
+  .advantages__title {
     text-align: center;
   }
 }
-.advantages-list__image {
+.advantages__image {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -778,52 +804,18 @@ p {
   margin-bottom: 30px;
 }
 @media screen and (min-width: 768px) {
-  .advantages-list__image {
+  .advantages__image {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
   }
 }
 
-.advantages-list__item {
-  margin: 15px 15px 30px;
-  -ms-flex-preferred-size: calc((100% - 60px) / 2);
-      flex-basis: calc((100% - 60px) / 2);
-  margin: 0 15px 30px;
-  -ms-flex-preferred-size: calc((100% - 120px) / 4);
-      flex-basis: calc((100% - 120px) / 4);
-}
-@media screen and (min-width: 480px) {
-  .advantages-list__item {
-    margin: 15px 15px 30px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .advantages-list__item {
-    -ms-flex-preferred-size: calc((100% - 60px) / 2);
-        flex-basis: calc((100% - 60px) / 2);
-    margin: 0 15px 30px;
-  }
-  .advantages-list__item:nth-last-child(-n+2) {
-    margin: 0 15px;
-  }
-}
-.advantages-list__item:nth-last-child(-n+2) {
-  margin: 0 15px;
-}
-@media screen and (min-width: 1200px) {
-  .advantages-list__item {
-    -ms-flex-preferred-size: calc((100% - 120px) / 4);
-        flex-basis: calc((100% - 120px) / 4);
-  }
-}
-
 /* напрямки діяльності */
 .section-directions {
-  display: none;
   display: block;
 }
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 1199.98px) {
   .section-directions {
     display: none;
   }
@@ -864,43 +856,41 @@ p {
 /* команда */
 .team {
   background-color: #f5f4fa;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+@media screen and (min-width: 480px) {
+  .team {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .team__list {
-  margin: 0 -15px;
-}
-.team__list {
-  display: block;
+  margin: -15px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
-@media screen and (max-width: 767.98px) {
-  .team__list {
-    display: block;
-  }
-}
-@media screen and (min-width: 768px) {
-  .team__list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-  }
-}
 
 .team__member {
-  width: 450px;
-  margin-bottom: 30px;
+  margin: 15px;
+  -ms-flex-preferred-size: calc((100% - 30px) / 1);
+      flex-basis: calc((100% - 30px) / 1);
   -ms-flex-preferred-size: calc((100% - 60px) / 2);
       flex-basis: calc((100% - 60px) / 2);
-  margin: 0 15px 30px;
   -ms-flex-preferred-size: calc((100% - 120px) / 4);
       flex-basis: calc((100% - 120px) / 4);
-  margin: 0 15px;
   border-radius: 0px 0px 4px 4px;
   -webkit-box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
@@ -908,28 +898,20 @@ p {
 }
 @media screen and (min-width: 480px) {
   .team__member {
-    width: 450px;
-    margin-bottom: 30px;
+    -ms-flex-preferred-size: calc((100% - 30px) / 1);
+        flex-basis: calc((100% - 30px) / 1);
   }
 }
 @media screen and (min-width: 768px) {
   .team__member {
     -ms-flex-preferred-size: calc((100% - 60px) / 2);
         flex-basis: calc((100% - 60px) / 2);
-    margin: 0 15px 30px;
   }
-  .team__member:nth-last-child(-n+2) {
-    margin: 0 15px;
-  }
-}
-.team__member:nth-last-child(-n+2) {
-  margin: 0 15px;
 }
 @media screen and (min-width: 1200px) {
   .team__member {
     -ms-flex-preferred-size: calc((100% - 120px) / 4);
         flex-basis: calc((100% - 120px) / 4);
-    margin: 0 15px;
   }
 }
 
@@ -967,18 +949,58 @@ p {
 }
 
 /* постійні клієнти */
-.clients__list {
+.clients-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: -15px;
 }
-.clients__icon {
-  fill: #afb1b8;
-  -webkit-transition: fill 250ms var(--timing-function);
-  transition: fill 250ms var(--timing-function);
+
+.clients__item {
+  -ms-flex-preferred-size: calc((100% - 60px) / 2);
+      flex-basis: calc((100% - 60px) / 2);
+  margin-bottom: 30px;
+  -ms-flex-preferred-size: calc((100% - 90px) / 3);
+      flex-basis: calc((100% - 90px) / 3);
+  margin: 15px;
+  -ms-flex-preferred-size: calc((100% - 180px) / 6);
+      flex-basis: calc((100% - 180px) / 6);
+  margin: 15px 15px 0;
 }
-.clients__item:not(:first-child) {
-  margin-left: 30px;
+@media screen and (min-width: 480px) {
+  .clients__item {
+    -ms-flex-preferred-size: calc((100% - 60px) / 2);
+        flex-basis: calc((100% - 60px) / 2);
+    margin-bottom: 30px;
+  }
+  .clients__item:nth-last-child(-n+2) {
+    margin-bottom: 0;
+  }
+}
+.clients__item:nth-last-child(-n+2) {
+  margin-bottom: 0;
+}
+@media screen and (min-width: 768px) {
+  .clients__item {
+    -ms-flex-preferred-size: calc((100% - 90px) / 3);
+        flex-basis: calc((100% - 90px) / 3);
+    margin: 15px;
+  }
+  .clients__item:nth-last-child(-n+3) {
+    margin-bottom: 0;
+  }
+}
+.clients__item:nth-last-child(-n+3) {
+  margin-bottom: 0;
+}
+@media screen and (min-width: 1200px) {
+  .clients__item {
+    -ms-flex-preferred-size: calc((100% - 180px) / 6);
+        flex-basis: calc((100% - 180px) / 6);
+    margin: 15px 15px 0;
+  }
 }
 
 .clients__link {
@@ -1002,6 +1024,11 @@ p {
   border-color: var(--accent-color);
 }
 
+.clients__icon {
+  fill: #afb1b8;
+  -webkit-transition: fill 250ms var(--timing-function);
+  transition: fill 250ms var(--timing-function);
+}
 clients__link:hover .clients__icon, clients__link:focus .clients__icon {
   fill: var(--accent-color);
 }
@@ -1101,17 +1128,6 @@ clients__link:hover .clients__icon, clients__link:focus .clients__icon {
   background-color: #2f303a;
   color: var(--primary-white-color);
 }
-.footer__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
-}
-.footer__address {
-  width: 231px;
-}
 .footer__title {
   display: block;
   margin-top: 0;
@@ -1122,10 +1138,104 @@ clients__link:hover .clients__icon, clients__link:focus .clients__icon {
   letter-spacing: 0.42px;
   text-transform: uppercase;
   color: #fff;
+  text-align: center;
+}
+@media screen and (min-width: 480px) {
+  .footer__title {
+    text-align: center;
+  }
 }
 
+.footer-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+  direction: column;
+}
+@media screen and (min-width: 480px) {
+  .footer-container {
+    direction: column;
+  }
+}
+
+.footer-address {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 231px;
+  margin-bottom: 60px;
+  margin: 0 auto;
+  margin-left: 0;
+  margin-right: 0;
+}
+@media screen and (min-width: 480px) {
+  .footer-address {
+    margin: 0 auto;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-address {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
+
+.footer-coords {
+  margin-right: auto;
+  margin-left: auto;
+  margin-left: 0;
+}
+@media screen and (min-width: 480px) {
+  .footer-coords {
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-coords {
+    margin-left: 0;
+  }
+}
+
+.footer-contacts__list {
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 60px;
+  margin: 0;
+}
+@media screen and (min-width: 480px) {
+  .footer-contacts__list {
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-contacts__list {
+    margin: 0;
+  }
+}
 .footer-contacts__item {
   margin-top: 9px;
+  text-align: center;
+  text-align: left;
+}
+@media screen and (min-width: 480px) {
+  .footer-contacts__item {
+    text-align: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-contacts__item {
+    text-align: left;
+  }
 }
 .footer-contacts__link {
   font-weight: 400;
@@ -1136,33 +1246,123 @@ clients__link:hover .clients__icon, clients__link:focus .clients__icon {
   transition: color 250ms var(--timing-function);
 }
 
+.footer-socials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 276px;
+  margin-bottom: 60px;
+  margin-right: auto;
+  margin-left: auto;
+  width: 206px;
+  margin: 0 0 0 70px;
+}
+@media screen and (min-width: 480px) {
+  .footer-socials {
+    width: 276px;
+    margin-bottom: 60px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-socials {
+    width: 206px;
+    margin: 0 0 0 70px;
+  }
+}
+
 .footer-contacts__link:hover, .footer-contacts__link:focus {
   color: var(--accent-color);
 }
 
 /* footer subscribe */
 .subscribe__footer {
+  margin-left: auto;
+  margin-right: auto;
   margin-left: 93px;
+  margin-right: 0;
+}
+@media screen and (min-width: 480px) {
+  .subscribe__footer {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .subscribe__footer {
+    margin-left: 93px;
+    margin-right: 0;
+  }
 }
 .subscribe__items {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-flex-direction: row;
+      flex-direction: row;
+}
+@media screen and (min-width: 480px) {
+  .subscribe__items {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .subscribe__items {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
 }
 .subscribe__input {
-  width: 358px;
   height: 50px;
   padding: 15px 16px;
-  margin-right: 10px;
   border-radius: 4px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   outline: transparent;
   background: rgba(33, 150, 243, 0);
   -webkit-transition: outline 250ms var(--timing-function);
   transition: outline 250ms var(--timing-function);
+  margin-right: 0;
+  margin-bottom: 20px;
+  width: 450px;
+  margin-bottom: 0;
+  margin-right: 12px;
+  width: 358px;
+}
+@media screen and (min-width: 480px) {
+  .subscribe__input {
+    margin-right: 0;
+    margin-bottom: 20px;
+    width: 450px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .subscribe__input {
+    margin-bottom: 0;
+    margin-right: 12px;
+    width: 358px;
+  }
 }
 
 .subscribe__input:not(:-moz-placeholder-shown) {
