--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -12,7 +12,6 @@ body {
 /* section */
 
 .section {
-  outline: 1px solid tomato;
   @include mq(mobile) {
     margin-top: 60px;
     margin-bottom: 60px;
@@ -42,11 +41,11 @@ body {
 
 .section__title--distance {
   @include mq(mobile) {
-    padding-top: 60px;
+    // padding-top: 60px;
     margin-bottom: 30px;
   }
   @include mq(desctop) {
-    padding-top: 94px;
-    margin-bottom: 60px;
+    // padding-top: 94px;
+    margin-bottom: 50px;
   }
 }
