--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -5,16 +5,21 @@
   padding-left: 15px;
   margin-left: auto;
   margin-right: auto;
+  // outline: 1px solid blue;
 
   @media screen and (min-width: 480px) {
     width: 480px;
+    // outline: 1px solid tomato;
   }
 
   @media screen and (min-width: 768px) {
     width: 768px;
+
+    // outline: 1px solid tomato;
   }
 
   @media screen and (min-width: 1200px) {
     width: 1200px;
+    // outline: 1px solid tomato;
   }
 }
