--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -16,6 +16,16 @@
 .logo__footer {
   display: inline-block;
   margin-bottom: 20px;
+
+  @include mq(mobile) {
+    margin-right: auto;
+    margin-left: auto;
+  }
+
+  @include mq(desctop) {
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
 
 .logo__text--black {
