--- a/sass/layouts/_advantages.scss
+++ b/sass/layouts/_advantages.scss
@@ -1,16 +1,27 @@
 /*  advantages  */
 
-.advantages-list {
-  margin: 0 -15px;
+.advantages__list {
+  display: flex;
+  flex-wrap: wrap;
+  margin: -15px;
+}
 
-  @include mq(mobile-only) {
-    display: block;
+.advantages__item {
+  @include mq(mobile) {
+    flex-basis: calc((100% - 30px) / 1);
+    margin: 15px;
   }
+
   @include mq(tablet) {
-    display: flex;
-    flex-wrap: wrap;
+    flex-basis: calc((100% - 60px) / 2);
   }
 
+  @include mq(desctop) {
+    flex-basis: calc((100% - 120px) / 4);
+  }
+}
+
+.advantages {
   &__title {
     margin-top: 0;
     margin-bottom: 10px;
@@ -38,24 +49,5 @@
     border-radius: 4px;
     background: #f5f4fa;
     margin-bottom: 30px;
-  }
-}
-
-.advantages-list__item {
-  @include mq(mobile) {
-    margin: 15px 15px 30px;
-  }
-
-  @include mq(tablet) {
-    flex-basis: calc((100% - 60px) / 2);
-    margin: 0 15px 30px;
-
-    &:nth-last-child(-n + 2) {
-      margin: 0 15px;
-    }
-  }
-
-  @include mq(desctop) {
-    flex-basis: calc((100% - 120px) / 4);
   }
 }
