--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -1,16 +1,46 @@
 /* постійні клієнти */
-.clients {
-  &__list {
-    display: flex;
+
+.clients-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin: -15px;
+
+  // @include mq(mobile) {
+  //   margin: -15px;
+  // }
+
+  // @include mq(tablet) {
+  //   margin: -15px;
+  // }
+
+  // @include mq(desctop) {
+  //   margin: -15px;
+  // }
+}
+
+.clients__item {
+  @include mq(mobile) {
+    flex-basis: calc((100% - 60px) / 2);
+    margin-bottom: 30px;
+
+    &:nth-last-child(-n + 2) {
+      margin-bottom: 0;
+    }
   }
 
-  &__icon {
-    fill: #afb1b8;
-    transition: fill 250ms var(--timing-function);
+  @include mq(tablet) {
+    flex-basis: calc((100% - 90px) / 3);
+    margin: 15px;
+
+    &:nth-last-child(-n + 3) {
+      margin-bottom: 0;
+    }
   }
 
-  &__item:not(:first-child) {
-    margin-left: 30px;
+  @include mq(desctop) {
+    flex-basis: calc((100% - 180px) / 6);
+    // margin-bottom: 0;
+    margin: 15px 15px 0;
   }
 }
 
@@ -32,6 +62,10 @@
 }
 
 .clients__icon {
+  fill: #afb1b8;
+
+  transition: fill 250ms var(--timing-function);
+
   clients__link:hover &,
   clients__link:focus & {
     fill: var(--accent-color);
