--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 @import './base/reset';
 @import './base/container';
 @import './base/card-set';
+@import './base/menu';
 
 // components
 @import './components/page__header';
