--- a/css/main.css
+++ b/css/main.css
@@ -107,6 +107,8 @@ ul {
 
 img {
   display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 p {
@@ -148,7 +150,113 @@ p {
 }
 
 /* сітка для колекції з елементів */
+/*  header-form button */
+.menu-button {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  padding: 0;
+  border: none;
+  border-color: transparent;
+  margin-left: auto;
+}
+@media screen and (min-width: 767px) {
+  .menu-button {
+    display: none;
+  }
+}
+
+.menu-button .icon-cross {
+  display: none;
+}
+
+.menu-button.is-open .icon-cross {
+  display: block;
+}
+
+.menu-button.is-open .icon-menu {
+  display: none;
+}
+
+@media screen and (max-width: 767px) {
+  .menu-container {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 796px;
+    padding: 48px 40px;
+    text-align: center;
+    font-size: 20px;
+    z-index: 3;
+    background-color: var(--primary-white-color);
+  }
+  .menu-container.is-open {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+@media screen and (min-width: 768px) {
+  .menu-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+.navigation {
+  text-align: center;
+}
+
+.menu-socials__item {
+  color: var(--accent-color);
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 1.22;
+  letter-spacing: 0.36px;
+}
+.menu-socials__item:not(:last-child) {
+  margin-right: 10px;
+  padding-right: 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
 /* page-header */
+.page-header {
+  position: relative;
+}
+
+.nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+@media screen and (max-width: 767px) {
+  .nav {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
 .main-nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -170,44 +278,94 @@ p {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  width: 450px;
+}
+@media screen and (max-width: 767.98px) {
+  .main-nav__navi {
+    width: 450px;
+  }
 }
 
 .site-nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 284px;
 }
-.site-nav__header {
-  margin-left: 93px;
+@media screen and (max-width: 767px) {
+  .site-nav {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: left;
+  }
+  .site-nav__item:not(:last-child) {
+    margin-bottom: 32px;
+  }
 }
-.site-nav__item:not(:first-child) {
-  margin-left: 50px;
+@media screen and (min-width: 1200px) {
+  .site-nav {
+    width: 284px;
+  }
+}
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .site-nav__header {
+    display: none;
+  }
+}
+@media screen and (min-width: 768px) {
+  .site-nav {
+    margin-left: 88px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .site-nav {
+    margin-left: 93px;
+  }
 }
 
 .site-nav__link {
   position: relative;
   display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 1.2;
-  letter-spacing: 0.28px;
   color: var(--title-text-color);
   -webkit-transition: color 250ms var(--timing-function);
   transition: color 250ms var(--timing-function);
 }
-.site-nav__link::after {
-  position: absolute;
-  content: "";
-  bottom: 0;
-  left: 0;
-  display: block;
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: var(--accent-color);
-  opacity: 0;
+@media screen and (max-width: 767px) {
+  .site-nav__link {
+    font-size: 40px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.8px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .site-nav__link {
+    padding-top: 32px;
+    padding-bottom: 32px;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.28px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .site-nav__link::after {
+    position: absolute;
+    content: "";
+    bottom: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--accent-color);
+    opacity: 0;
+  }
 }
 .site-nav__link:hover, .site-nav__link:focus {
   color: var(--accent-color);
@@ -221,20 +379,72 @@ p {
 }
 
 /*  contacts  */
-.contacts {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+@media screen and (min-width: 768px) {
+  .navigation__contacts {
+    margin-left: 72px;
+  }
 }
-.contacts__item:not(:first-child) {
-  margin-left: 50px;
+@media screen and (min-width: 1200px) {
+  .navigation__contacts {
+    margin-left: 326px;
+  }
 }
-.contacts__icon {
-  fill: currentColor;
-  margin-right: 10px;
+
+@media screen and (max-width: 767px) {
+  .contacts {
+    margin-left: 0;
+    margin-bottom: 64px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .contacts {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contacts {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
+@media screen and (min-width: 768px) {
+  .contacts__icon {
+    fill: currentColor;
+    margin-right: 10px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .contacts__icon {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .contacts__item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contacts__item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contacts__item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .contacts__link {
@@ -254,6 +464,34 @@ p {
 }
 .contacts__link:hover, .contacts__link:focus {
   color: var(--accent-color);
+}
+@media screen and (max-width: 767px) {
+  .contacts__link {
+    font-size: 24px;
+    font-weight: 500;
+    letter-spacing: 0.48px;
+  }
+  .contacts__link--size {
+    color: #2196f3;
+    font-size: 34px;
+    font-weight: 500;
+    letter-spacing: 0.68px;
+  }
+}
+
+.menu-socials__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+@media screen and (min-width: 768px) {
+  .menu-socials {
+    display: none;
+  }
 }
 
 /*  hero  button  */
@@ -339,9 +577,6 @@ p {
   -webkit-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
           box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
 }
-.portfolio-btn__item:not(:first-child) {
-  margin-left: 8px;
-}
 .portfolio-btn__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -353,6 +588,31 @@ p {
       -ms-flex-align: center;
           align-items: center;
   margin-bottom: 50px;
+}
+@media screen and (max-width: 767px) {
+  .portfolio-btn__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    max-width: 328px;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+  }
+}
+
+.portfolio-btn__item:not(:first-child) {
+  margin-left: 8px;
+}
+@media screen and (max-width: 767px) {
+  .portfolio-btn__item:nth-child(-n+3) {
+    margin-bottom: 15px;
+  }
+  .portfolio-btn__item:nth-child(4) {
+    margin-left: 0;
+  }
 }
 
 .portfolio-btn--current {
@@ -424,12 +684,20 @@ p {
 /*  logo  */
 .logo {
   font-family: var(--secondary-font);
-  font-size: 26px;
+  font-size: 24px;
   font-weight: 700;
   line-height: 1.2;
-  letter-spacing: 0.78px;
+  letter-spacing: 0.72px;
   text-decoration: none;
   color: var(--accent-color);
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+@media screen and (max-width: 767.98px) {
+  .logo {
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
 }
 
 /* logo footer */
@@ -475,11 +743,11 @@ p {
 .backdrop {
   position: fixed;
   top: 0;
-  left: 50%;
-  width: 100%;
+  left: 0;
+  width: 100vw;
   height: 100%;
-  -webkit-transform: translatex(-50%);
-          transform: translatex(-50%);
+  padding: 93px 15px 15px;
+  overflow-y: scroll;
   opacity: 1;
   -webkit-transition: opacity 250ms var(--timing-function);
   transition: opacity 250ms var(--timing-function);
@@ -500,12 +768,33 @@ p {
   -webkit-box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
   background-color: var(--primary-white-color);
-  -webkit-transform: translate(-50%, 0) scale(1);
-          transform: translate(-50%, 0) scale(1);
+  -webkit-transform: translate(-50%, -50px) scale(1);
+          transform: translate(-50%, -50px) scale(1);
   -webkit-transition: -webkit-transform 250ms var(--timing-function);
   transition: -webkit-transform 250ms var(--timing-function);
   transition: transform 250ms var(--timing-function);
   transition: transform 250ms var(--timing-function), -webkit-transform 250ms var(--timing-function);
+}
+@media screen and (max-width: 1199px) {
+  .modal {
+    position: static;
+    left: 0;
+    width: 450px;
+    top: 93px;
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
+  }
+}
+@media screen and (min-width: 768px) {
+  .modal {
+    position: absolute;
+  }
+}
+@media screen and (min-width: 768px) {
+  .modal {
+    -webkit-transform: translate(-50%, -50px) scale(1);
+            transform: translate(-50%, -50px) scale(1);
+  }
 }
 
 /* modal-btn */
@@ -539,7 +828,13 @@ p {
   text-align: center;
   font-size: 20px;
   font-weight: 700;
+  line-height: 1.5;
   letter-spacing: 0.6px;
+}
+@media screen and (min-width: 1200px) {
+  .modal-form__title {
+    line-height: 1.2;
+  }
 }
 .modal-form__group {
   position: relative;
@@ -636,8 +931,13 @@ p {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-left: 12px;
-  margin-bottom: 30px;
+  margin-left: 0;
+  margin-bottom: 31px;
+}
+@media screen and (min-width: 1200px) {
+  .modal-form__policy {
+    margin-left: 12px;
+  }
 }
 .modal-form__policy-label {
   position: relative;
@@ -652,13 +952,27 @@ p {
   letter-spacing: 0.42px;
   cursor: pointer;
 }
+@media screen and (max-width: 1199px) {
+  .modal-form__policy-label {
+    font-size: 12px;
+    line-height: 1.2;
+    letter-spacing: 0.36px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal-form__policy-label {
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.42px;
+  }
+}
 .modal-form__policy-span {
   color: #2196f3;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 1.71;
-  letter-spacing: 0.42px;
   text-decoration-line: underline;
+}
+
+.form-policy-desc {
+  text-align: left;
 }
 
 .modal-form__heckbox-custom {
@@ -667,6 +981,7 @@ p {
   height: 15px;
   border: 2px solid var(--title-text-color);
   border-radius: 2px;
+  color: #212121;
   -webkit-transition: border-color 250ms var(--timing-function);
   transition: border-color 250ms var(--timing-function);
 }
@@ -676,7 +991,6 @@ p {
 
 .modal-form__checkbox-check {
   position: absolute;
-  top: 4px;
   left: 0;
   opacity: 0;
   -webkit-transition: opacity 250ms var(--timing-function);
@@ -705,18 +1019,52 @@ p {
   padding-top: 200px;
   padding-bottom: 200px;
 }
+@media screen and (max-width: 1199px) {
+  .hero__container {
+    padding-top: 118px;
+    padding-bottom: 118px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero__container {
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
+}
 .hero__title {
   width: 696px;
-  margin-top: 0;
   margin-bottom: 30px;
   margin-left: auto;
   margin-right: auto;
   font-size: 44px;
-  font-weight: 900;
   line-height: 1.36;
   letter-spacing: 2.64px;
   text-align: center;
   text-transform: uppercase;
+}
+@media screen and (max-width: 1199px) {
+  .hero__title {
+    width: 360px;
+    margin-top: 0;
+    margin-bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 26px;
+    font-weight: 900;
+    line-height: 1.61;
+    letter-spacing: 1.56px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    width: 696px;
+    margin-bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 44px;
+    line-height: 1.36;
+    letter-spacing: 2.64px;
+  }
 }
 
 .overlay {
@@ -741,11 +1089,19 @@ p {
       flex-wrap: wrap;
   margin: -15px;
 }
+@media screen and (max-width: 479.98px) {
+  .advantages__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
 
 .advantages__item {
+  margin: 15px;
   -ms-flex-preferred-size: calc((100% - 30px) / 1);
       flex-basis: calc((100% - 30px) / 1);
-  margin: 15px;
   -ms-flex-preferred-size: calc((100% - 60px) / 2);
       flex-basis: calc((100% - 60px) / 2);
   -ms-flex-preferred-size: calc((100% - 120px) / 4);
@@ -755,7 +1111,6 @@ p {
   .advantages__item {
     -ms-flex-preferred-size: calc((100% - 30px) / 1);
         flex-basis: calc((100% - 30px) / 1);
-    margin: 15px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -791,7 +1146,6 @@ p {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 100%;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -1034,10 +1388,6 @@ clients__link:hover .clients__icon, clients__link:focus .clients__icon {
 }
 
 /* Portfolio */
-.portfolio {
-  padding-top: 94px;
-}
-
 .card__portfolio {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1052,6 +1402,12 @@ clients__link:hover .clients__icon, clients__link:focus .clients__icon {
   display: flex;
   -ms-flex-preferred-size: calc((100% - 60px) / 3);
       flex-basis: calc((100% - 60px) / 3);
+}
+@media screen and (max-width: 767px) {
+  .card__item {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
 }
 .card__dir-wrapper {
   padding: 20px 24px;
