--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -2,13 +2,18 @@
 
 .logo {
   font-family: var(--secondary-font);
-  font-size: 26px;
+  font-size: 24px;
   font-weight: 700;
   line-height: 1.2;
-  letter-spacing: 0.78px;
+  letter-spacing: 0.72px;
   text-decoration: none;
 
   color: var(--accent-color);
+
+  @include mq(mobile-only) {
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
 }
 
 /* logo footer */
