--- a/sass/components/_page__header.scss
+++ b/sass/components/_page__header.scss
@@ -1,5 +1,18 @@
 /* page-header */
 
+.page-header {
+  position: relative;
+}
+
+.nav {
+  display: flex;
+  align-items: center;
+
+  @media screen and (max-width: 767px) {
+    justify-content: space-between;
+  }
+}
+
 .main-nav {
   display: flex;
   justify-content: space-between;
@@ -12,47 +25,82 @@
   &__navi {
     display: flex;
     align-items: center;
+
+    @include mq(mobile-only) {
+      width: 450px;
+    }
   }
 }
 
 .site-nav {
   display: flex;
+  justify-content: space-between;
 
-  &__header {
-    margin-left: 93px;
+  @media screen and (max-width: 767px) {
+    flex-direction: column;
+    text-align: left;
+
+    &__item:not(:last-child) {
+      margin-bottom: 32px;
+    }
   }
 
-  &__item:not(:first-child) {
-    margin-left: 50px;
+  @include mq(desctop) {
+    width: 284px;
+  }
+
+  &__header {
+    @media screen and (min-width: 480px) and (max-width: 767px) {
+      display: none;
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    margin-left: 88px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-left: 93px;
   }
 }
 
 .site-nav__link {
   position: relative;
   display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 1.2;
-  letter-spacing: 0.28px;
 
   color: var(--title-text-color);
 
   transition: color 250ms var(--timing-function);
 
-  &::after {
-    position: absolute;
-    content: '';
-    bottom: 0;
-    left: 0;
-    display: block;
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
+  @media screen and (max-width: 767px) {
+    font-size: 40px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.8px;
+  }
+  @media screen and (min-width: 768px) {
+    padding-top: 32px;
+    padding-bottom: 32px;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.28px;
+  }
 
-    background-color: var(--accent-color);
-    opacity: 0;
+  @media screen and (min-width: 768px) {
+    &::after {
+      position: absolute;
+      content: '';
+      bottom: 0;
+      left: 0;
+      display: block;
+      width: 100%;
+      height: 4px;
+      border-radius: 2px;
+
+      background-color: var(--accent-color);
+      opacity: 0;
+    }
   }
 
   &:hover,
