--- a/sass/components/modal-form/_modal-form.scss
+++ b/sass/components/modal-form/_modal-form.scss
@@ -16,6 +16,11 @@
     text-align: center;
     font-size: 20px;
     font-weight: 700;
+    line-height: 1.5;
+
+    @media screen and (min-width: 1200px) {
+      line-height: 1.2;
+    }
     letter-spacing: 0.6px;
   }
 
