--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -5,21 +5,38 @@
   color: var(--primary-white-color);
 
   &__container {
-    padding-top: 200px;
-    padding-bottom: 200px;
+    @media screen and (max-width: 1199px) {
+      padding-top: 118px;
+      padding-bottom: 118px;
+    }
+    @include mq(desctop) {
+      padding-top: 200px;
+      padding-bottom: 200px;
+    }
   }
 
   &__title {
-    width: 696px;
-    margin-top: 0;
-    margin-bottom: 30px;
-    margin-left: auto;
-    margin-right: auto;
+    @media screen and (max-width: 1199px) {
+      width: 360px;
+      margin-top: 0;
+      margin-bottom: 30px;
+      margin-left: auto;
+      margin-right: auto;
+      font-size: 26px;
+      font-weight: 900;
+      line-height: 1.61;
+      letter-spacing: 1.56px;
+    }
 
-    font-size: 44px;
-    font-weight: 900;
-    line-height: 1.36;
-    letter-spacing: 2.64px;
+    @include mq(desctop) {
+      width: 696px;
+      margin-bottom: 30px;
+      margin-left: auto;
+      margin-right: auto;
+      font-size: 44px;
+      line-height: 1.36;
+      letter-spacing: 2.64px;
+    }
 
     text-align: center;
     text-transform: uppercase;
@@ -38,5 +55,3 @@
     url(../images/hero/hero-img.jpg);
   background-position: center;
 }
-
-
