--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -1,9 +1,5 @@
 /* Portfolio */
 
-.portfolio {
-  padding-top: 94px;
-}
-
 .card {
   &__portfolio {
     display: flex;
@@ -14,6 +10,10 @@
   &__item {
     display: flex;
     flex-basis: calc((100% - 60px) / 3);
+
+    @media screen and (max-width: 767px) {
+      flex-basis: calc(100% / 1);
+    }
   }
 
   &__dir-wrapper {
