коригує адаптивну верстку

--- a/sass/base/_menu.scss
+++ b/sass/base/_menu.scss
@@ -1,14 +1,20 @@
 /*  header-form button */
 
 .menu-button {
+  position: absolute;
+  top: 10px;
+  right: 0;
   display: inline-flex;
   padding: 0;
   border: none;
   border-color: transparent;
   margin-left: auto;
-  // fill: #000;
+  fill: var(--title-text-color);
+  cursor: pointer;
 
-  @media screen and (min-width: 767px) {
+  z-index: 5;
+
+  @media screen and (min-width: 768px) {
     display: none;
   }
 }
@@ -29,9 +35,9 @@
   @media screen and (max-width: 767px) {
     display: none;
     position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
+    top: 0;
+    left: -15px;
+    width: 480px;
     height: 796px;
     padding: 48px 40px;
     text-align: center;
