--- a/css/main.css
+++ b/css/main.css
@@ -152,6 +152,9 @@ p {
 /* сітка для колекції з елементів */
 /*  header-form button */
 .menu-button {
+  position: absolute;
+  top: 10px;
+  right: 0;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -159,8 +162,11 @@ p {
   border: none;
   border-color: transparent;
   margin-left: auto;
+  fill: var(--title-text-color);
+  cursor: pointer;
+  z-index: 5;
 }
-@media screen and (min-width: 767px) {
+@media screen and (min-width: 768px) {
   .menu-button {
     display: none;
   }
@@ -182,9 +188,9 @@ p {
   .menu-container {
     display: none;
     position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
+    top: 0;
+    left: -15px;
+    width: 480px;
     height: 796px;
     padding: 48px 40px;
     text-align: center;
@@ -242,18 +248,19 @@ p {
 }
 
 .nav {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  border-bottom: 1px solid #ececec;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1199px) {
   .nav {
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    padding-top: 16px;
+    padding-bottom: 16px;
   }
 }
 
@@ -267,9 +274,6 @@ p {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-.main-nav__container {
-  border-bottom: 1px solid #ececec;
 }
 .main-nav__navi {
   display: -webkit-box;
@@ -690,14 +694,6 @@ p {
   letter-spacing: 0.72px;
   text-decoration: none;
   color: var(--accent-color);
-  padding-top: 16px;
-  padding-bottom: 16px;
-}
-@media screen and (max-width: 767.98px) {
-  .logo {
-    padding-top: 16px;
-    padding-bottom: 16px;
-  }
 }
 
 /* logo footer */
@@ -738,7 +734,7 @@ p {
   left: 0;
   width: 100vw;
   height: 100%;
-  padding: 93px 15px 15px;
+  padding: 0 15px;
   overflow-y: scroll;
   opacity: 1;
   -webkit-transition: opacity 250ms var(--timing-function);
@@ -766,15 +762,13 @@ p {
   .modal {
     left: 0;
     width: 99%;
-    top: 93px;
-    -webkit-transform: translate(0, 0);
-            transform: translate(0, 0);
+    top: 73px;
   }
 }
 @media screen and (min-width: 480px) {
   .modal {
     position: absolute;
-    top: 93px;
+    top: 123px;
     left: 50%;
     width: 100%;
     max-width: 450px;
@@ -782,10 +776,19 @@ p {
             transform: translate(-50%, -50px);
   }
 }
+@media screen and (min-width: 768px) {
+  .modal {
+    top: 243px;
+  }
+}
 @media screen and (min-width: 1200px) {
   .modal {
-    top: 222px;
-    width: 528px;
+    left: 50%;
+    top: 273px;
+    width: 100%;
+    max-width: 528px;
+    -webkit-transform: translate(-50%, -50px);
+            transform: translate(-50%, -50px);
   }
 }
 
