--- a/sass/components/modal-form/_modal.scss
+++ b/sass/components/modal-form/_modal.scss
@@ -4,7 +4,8 @@
   left: 0;
   width: 100vw;
   height: 100%;
-  padding: 93px 15px 15px;
+  padding: 0 15px;
+  // padding: 93px 15px 15px;
   overflow-y: scroll;
 
   opacity: 1;
@@ -22,7 +23,6 @@
 
 .modal {
   position: relative;
-  // top: 93px;
   border-radius: 4px;
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
@@ -34,26 +34,29 @@
   @media screen and (min-width: 360px) {
     left: 0;
     width: 99%;
-    top: 93px;
-    transform: translate(0, 0);
+    top: 73px;
   }
 
   @media screen and (min-width: 480px) {
-    // @media screen and (min-width: 480px) and (max-width: 1199px) {
     position: absolute;
-    top: 93px;
+    top: 123px;
     left: 50%;
     width: 100%;
     max-width: 450px;
 
     transform: translate(-50%, -50px);
-    // transform: translate(-50%, -50px) scale(1);
+  }
+
+  @media screen and (min-width: 768px) {
+    top: 243px;
   }
 
   @media screen and (min-width: 1200px) {
-    // left: 50%;
-    top: 222px;
-    width: 528px;
+    left: 50%;
+    top: 273px;
+    width: 100%;
+    max-width: 528px;
+    transform: translate(-50%, -50px);
   }
 }
 
