--- a/sass/base/_menu.scss
+++ b/sass/base/_menu.scss
@@ -17,6 +17,11 @@
   @media screen and (min-width: 768px) {
     display: none;
   }
+
+  &:hover,
+  &:focus {
+    fill: var(--accent-color);
+  }
 }
 
 .menu-button .icon-cross {
