--- a/sass/layouts/_advantages.scss
+++ b/sass/layouts/_advantages.scss
@@ -3,70 +3,27 @@
 .advantages__list {
   display: flex;
   flex-wrap: wrap;
-
   margin: -15px;
 
-  @media screen and (max-width: (480px - 0.02)) {
+  @media screen and (max-width: (479px)) {
     flex-direction: column;
   }
 }
 
 .advantages__item {
   margin: 15px;
-
-  @include mq(mobile) {
+  @media screen and (min-width: 360px) {
     flex-basis: calc((100% - 30px) / 1);
   }
 
-  @include mq(tablet) {
+  @media screen and (min-width: 768px) {
     flex-basis: calc((100% - 60px) / 2);
   }
 
-  @include mq(desctop) {
+  @media screen and (min-width: 1200px) {
     flex-basis: calc((100% - 120px) / 4);
   }
 }
-
-// .advantages__list {
-//   @include mq(mobile) {
-//     margin-top: 0;
-//     margin-bottom: 0;
-//     padding: 0 15px;
-//   }
-
-//   @include mq(tablet) {
-//     display: flex;
-//     flex-wrap: wrap;
-//     margin: -15px;
-//   }
-
-//   @media screen and (max-width: (480px - 0.02)) {
-//     flex-direction: column;
-//   }
-// }
-
-// .advantages__item {
-//   @include mq(mobile) {
-//     flex-basis: calc(100% / 1);
-//     // margin: 0;
-//   }
-
-//   &:not(:last-child) {
-//     @include mq(mobile-only) {
-//       margin-bottom: 30px;
-//     }
-//   }
-
-//   @include mq(tablet) {
-//     flex-basis: calc((100% - 60px) / 2);
-//     margin: 15px;
-//   }
-
-//   @include mq(desctop) {
-//     flex-basis: calc((100% - 120px) / 4);
-//     margin: 15px;
-//   }
-// }
 
 .advantages {
   &__title {
@@ -75,21 +32,19 @@
     font-size: 14px;
     line-height: 1.2;
     letter-spacing: 0.42px;
-    @include mq(mobile-only) {
-      text-align: center;
-    }
     text-align: left;
 
     color: var(--title-text-color);
 
     text-transform: uppercase;
+
+    @media screen and (max-width: (767px)) {
+      text-align: center;
+    }
   }
 
   &__image {
-    @include mq(tablet) {
-      display: flex;
-    }
-    // width: 100%;
+    display: flex;
     justify-content: center;
     align-items: center;
     height: 120px;
