--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -5,6 +5,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
+    flex-grow: 1;
   }
 
   &__item {
@@ -21,7 +22,7 @@
     @media screen and (min-width: 768px) and (max-width: 1199px) {
       &:first-child {
         .card__dir-wrapper {
-          padding-bottom: 56px;
+          flex-grow: 1;
         }
       }
     }
@@ -74,6 +75,9 @@
 }
 
 .card__link {
+  display: flex;
+  flex-direction: column;
+
   box-shadow: none;
 
   transition: box-shadow 250ms var(--timing-function);
@@ -110,6 +114,7 @@
 
   .card__link:hover &,
   .card__link:focus & {
-    transform: translate(0%);
+    transform: translate(0);
+    transition: transform 250ms var(--timing-function);
   }
 }
