--- a/css/main.css
+++ b/css/main.css
@@ -11,9 +11,6 @@
   --footer-color: rgba(255, 255, 255, 0.6);
   /* transition */
   --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  /* grid-items */
-  /* --items: 1;
-  /* --indent: 30px;  */
 }
 
 .visually-hidden {
@@ -52,14 +49,6 @@ body {
 .section {
   margin-top: 60px;
   margin-bottom: 60px;
-  margin-top: 94px;
-  margin-bottom: 94px;
-}
-@media screen and (min-width: 480px) {
-  .section {
-    margin-top: 60px;
-    margin-bottom: 60px;
-  }
 }
 @media screen and (min-width: 1200px) {
   .section {
@@ -68,7 +57,6 @@ body {
   }
 }
 .section__title {
-  margin-bottom: 30px;
   margin-top: 0;
   margin-bottom: 50px;
   text-align: center;
@@ -84,10 +72,6 @@ body {
   }
 }
 
-.section__title--distance {
-  margin-bottom: 30px;
-  margin-bottom: 50px;
-}
 @media screen and (min-width: 480px) {
   .section__title--distance {
     margin-bottom: 30px;
@@ -132,10 +116,11 @@ p {
   padding-left: 15px;
   margin-left: auto;
   margin-right: auto;
+  width: 480px;
 }
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 360px) {
   .container {
-    width: 480px;
+    max-width: 480px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -149,7 +134,6 @@ p {
   }
 }
 
-/* сітка для колекції з елементів */
 /*  header-form button */
 .menu-button {
   position: absolute;
@@ -165,6 +149,8 @@ p {
   fill: var(--title-text-color);
   cursor: pointer;
   z-index: 5;
+  -webkit-transition: color 250ms var(--timing-function);
+  transition: color 250ms var(--timing-function);
 }
 @media screen and (min-width: 768px) {
   .menu-button {
@@ -219,9 +205,6 @@ p {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -255,41 +238,18 @@ p {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-bottom: 1px solid #ececec;
-}
-@media screen and (max-width: 1199px) {
-  .nav {
-    padding-top: 16px;
-    padding-bottom: 16px;
-  }
-}
-
-.main-nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  border-bottom: 1px solid #ececec;
 }
-.main-nav__navi {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 450px;
-}
-@media screen and (max-width: 767.98px) {
-  .main-nav__navi {
-    width: 450px;
+@media screen and (max-width: 767px) {
+  .nav {
+    padding-top: 16px;
+    padding-bottom: 16px;
   }
 }
 
@@ -300,7 +260,6 @@ p {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  width: 284px;
 }
 @media screen and (max-width: 767px) {
   .site-nav {
@@ -322,16 +281,6 @@ p {
 @media screen and (min-width: 480px) and (max-width: 767px) {
   .site-nav__header {
     display: none;
-  }
-}
-@media screen and (min-width: 768px) {
-  .site-nav {
-    margin-left: 88px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .site-nav {
-    margin-left: 93px;
   }
 }
 
@@ -432,9 +381,33 @@ p {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .nav__contacts {
+    margin-left: 90px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .nav__contacts {
+    margin-left: 315px;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .contacts__icon {
     display: none;
+  }
+}
+@media screen and (max-width: 1199px) {
+  .contacts__icon {
+    margin-right: 8px;
+  }
+  .contacts__icon--mail {
+    width: 14px;
+    height: 10px;
+  }
+  .contacts__icon--tel {
+    width: 10px;
+    height: 14px;
   }
 }
 
@@ -483,6 +456,12 @@ p {
     font-size: 34px;
     font-weight: 500;
     letter-spacing: 0.68px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contacts__link {
+    font-size: 12px;
+    letter-spacing: 0.24px;
   }
 }
 
@@ -756,42 +735,40 @@ p {
   -webkit-box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
   background-color: var(--primary-white-color);
+  -webkit-transform: translatex(-50%);
+          transform: translatex(-50%);
   -webkit-transition: -webkit-transform 250ms var(--timing-function);
   transition: -webkit-transform 250ms var(--timing-function);
   transition: transform 250ms var(--timing-function);
   transition: transform 250ms var(--timing-function), -webkit-transform 250ms var(--timing-function);
 }
-@media screen and (min-width: 360px) {
+@media screen and (min-width: 320px) {
   .modal {
-    left: 0;
+    left: 50%;
     width: 99%;
-    top: 73px;
+    top: 93px;
   }
 }
 @media screen and (min-width: 480px) {
   .modal {
     position: absolute;
-    top: 145px;
+    top: 93px;
     left: 50%;
     width: 100%;
     max-width: 450px;
-    -webkit-transform: translate(-50%, -50px);
-            transform: translate(-50%, -50px);
   }
 }
 @media screen and (min-width: 768px) {
   .modal {
-    top: 293px;
+    top: 208px;
   }
 }
 @media screen and (min-width: 1200px) {
   .modal {
     left: 50%;
-    top: 273px;
+    top: 221px;
     width: 100%;
     max-width: 528px;
-    -webkit-transform: translate(-50%, -50px);
-            transform: translate(-50%, -50px);
   }
 }
 
@@ -878,9 +855,6 @@ p {
   fill: var(--accent-color);
 }
 
-/* .modal-form__group:focus-within > .modal-form__icon {
-  fill: var(--accent-color);
-} */
 .modal-form__comment {
   padding: 12px 16px;
   border-radius: 4px;
@@ -945,9 +919,6 @@ p {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.42px;
   cursor: pointer;
 }
 @media screen and (max-width: 1199px) {
@@ -999,23 +970,10 @@ p {
   fill: var(--accent-color);
 }
 
-/* .modal-form__checkbox-vector {
-  margin-right: 7px;
-  fill: var(--title-text-color);
-
-  transition: fill 250ms var(--timing-function);
-} */
-/* .checkbox:focus + .checkbox-vector {
-  fill: var(--accent-color);
-} */
 /*  hero  */
 .hero {
   text-align: center;
   color: var(--primary-white-color);
-}
-.hero__container {
-  padding-top: 200px;
-  padding-bottom: 200px;
 }
 @media screen and (max-width: 1199px) {
   .hero__container {
@@ -1030,13 +988,6 @@ p {
   }
 }
 .hero__title {
-  width: 696px;
-  margin-bottom: 30px;
-  margin-left: auto;
-  margin-right: auto;
-  font-size: 44px;
-  line-height: 1.36;
-  letter-spacing: 2.64px;
   text-align: center;
   text-transform: uppercase;
 }
@@ -1118,7 +1069,7 @@ p {
       flex-wrap: wrap;
   margin: -15px;
 }
-@media screen and (max-width: 479.98px) {
+@media screen and (max-width: 479px) {
   .advantages__list {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -1129,14 +1080,8 @@ p {
 
 .advantages__item {
   margin: 15px;
-  -ms-flex-preferred-size: calc((100% - 30px) / 1);
-      flex-basis: calc((100% - 30px) / 1);
-  -ms-flex-preferred-size: calc((100% - 60px) / 2);
-      flex-basis: calc((100% - 60px) / 2);
-  -ms-flex-preferred-size: calc((100% - 120px) / 4);
-      flex-basis: calc((100% - 120px) / 4);
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 360px) {
   .advantages__item {
     -ms-flex-preferred-size: calc((100% - 30px) / 1);
         flex-basis: calc((100% - 30px) / 1);
@@ -1161,12 +1106,11 @@ p {
   font-size: 14px;
   line-height: 1.2;
   letter-spacing: 0.42px;
-  text-align: center;
   text-align: left;
   color: var(--title-text-color);
   text-transform: uppercase;
 }
-@media screen and (max-width: 767.98px) {
+@media screen and (max-width: 767px) {
   .advantages__title {
     text-align: center;
   }
@@ -1186,19 +1130,9 @@ p {
   background: #f5f4fa;
   margin-bottom: 30px;
 }
-@media screen and (min-width: 768px) {
-  .advantages__image {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-}
 
 /* напрямки діяльності */
-.section-directions {
-  display: block;
-}
-@media screen and (max-width: 1199.98px) {
+@media screen and (max-width: 1199px) {
   .section-directions {
     display: none;
   }
@@ -1241,14 +1175,6 @@ p {
   background-color: #f5f4fa;
   padding-top: 60px;
   padding-bottom: 60px;
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-@media screen and (min-width: 480px) {
-  .team {
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
 }
 @media screen and (min-width: 1200px) {
   .team {
@@ -1268,12 +1194,6 @@ p {
 
 .team__member {
   margin: 15px;
-  -ms-flex-preferred-size: calc((100% - 30px) / 1);
-      flex-basis: calc((100% - 30px) / 1);
-  -ms-flex-preferred-size: calc((100% - 60px) / 2);
-      flex-basis: calc((100% - 60px) / 2);
-  -ms-flex-preferred-size: calc((100% - 120px) / 4);
-      flex-basis: calc((100% - 120px) / 4);
   border-radius: 0px 0px 4px 4px;
   -webkit-box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
@@ -1300,8 +1220,6 @@ p {
 
 .member__group {
   padding-top: 30px;
-  padding-bottom: 24px;
-  padding-bottom: 30px;
 }
 @media screen and (min-width: 768px) {
   .member__group {
@@ -1338,32 +1256,20 @@ p {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin: -15px;
+  margin: -15px -15px 0;
 }
 
 .clients__item {
-  -ms-flex-preferred-size: calc((100% - 60px) / 2);
-      flex-basis: calc((100% - 60px) / 2);
-  margin-bottom: 30px;
-  -ms-flex-preferred-size: calc((100% - 90px) / 3);
-      flex-basis: calc((100% - 90px) / 3);
   margin: 15px;
-  -ms-flex-preferred-size: calc((100% - 180px) / 6);
-      flex-basis: calc((100% - 180px) / 6);
-  margin: 15px 15px 0;
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 320px) {
   .clients__item {
     -ms-flex-preferred-size: calc((100% - 60px) / 2);
         flex-basis: calc((100% - 60px) / 2);
-    margin-bottom: 30px;
   }
   .clients__item:nth-last-child(-n+2) {
     margin-bottom: 0;
   }
-}
-.clients__item:nth-last-child(-n+2) {
-  margin-bottom: 0;
 }
 @media screen and (min-width: 768px) {
   .clients__item {
@@ -1374,9 +1280,6 @@ p {
   .clients__item:nth-last-child(-n+3) {
     margin-bottom: 0;
   }
-}
-.clients__item:nth-last-child(-n+3) {
-  margin-bottom: 0;
 }
 @media screen and (min-width: 1200px) {
   .clients__item {
@@ -1438,6 +1341,9 @@ clients__link:hover .clients__icon, clients__link:focus .clients__icon {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   gap: 30px;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 .card__item {
   display: -webkit-box;
@@ -1458,7 +1364,9 @@ clients__link:hover .clients__icon, clients__link:focus .clients__icon {
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .card__item:first-child .card__dir-wrapper {
-    padding-bottom: 56px;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -1505,6 +1413,13 @@ clients__link:hover .clients__icon, clients__link:focus .clients__icon {
 }
 
 .card__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-shadow: none;
           box-shadow: none;
   -webkit-transition: -webkit-box-shadow 250ms var(--timing-function);
@@ -1541,8 +1456,12 @@ clients__link:hover .clients__icon, clients__link:focus .clients__icon {
   color: #fff;
 }
 .card__link:hover .card-overlay, .card__link:focus .card-overlay {
-  -webkit-transform: translate(0%);
-          transform: translate(0%);
+  -webkit-transform: translate(0);
+          transform: translate(0);
+  -webkit-transition: -webkit-transform 250ms var(--timing-function);
+  transition: -webkit-transform 250ms var(--timing-function);
+  transition: transform 250ms var(--timing-function);
+  transition: transform 250ms var(--timing-function), -webkit-transform 250ms var(--timing-function);
 }
 
 /* footer */
@@ -1560,14 +1479,9 @@ clients__link:hover .clients__icon, clients__link:focus .clients__icon {
   font-weight: 700;
   line-height: 1.2;
   letter-spacing: 0.42px;
+  text-align: center;
   text-transform: uppercase;
   color: #fff;
-  text-align: center;
-}
-@media screen and (min-width: 480px) {
-  .footer__title {
-    text-align: center;
-  }
 }
 
 .footer-container {
@@ -1580,11 +1494,6 @@ clients__link:hover .clients__icon, clients__link:focus .clients__icon {
       -ms-flex-align: baseline;
           align-items: baseline;
   direction: column;
-}
-@media screen and (min-width: 480px) {
-  .footer-container {
-    direction: column;
-  }
 }
 
 .footer-address {
@@ -1672,12 +1581,6 @@ clients__link:hover .clients__icon, clients__link:focus .clients__icon {
 .subscribe__footer {
   margin-left: auto;
   margin-right: auto;
-}
-@media screen and (min-width: 480px) {
-  .subscribe__footer {
-    margin-left: auto;
-    margin-right: auto;
-  }
 }
 @media screen and (min-width: 1200px) {
   .subscribe__footer {
