--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -5,10 +5,11 @@
   padding-left: 15px;
   margin-left: auto;
   margin-right: auto;
+  width: 480px;
   // outline: 1px solid blue;
 
-  @media screen and (min-width: 480px) {
-    width: 480px;
+  @media screen and (max-width: 360px) {
+    max-width: 480px;
     // outline: 1px solid tomato;
   }
 
