--- a/sass/base/_menu.scss
+++ b/sass/base/_menu.scss
@@ -14,6 +14,8 @@
 
   z-index: 5;
 
+  transition: color 250ms var(--timing-function);
+
   @media screen and (min-width: 768px) {
     display: none;
   }
@@ -60,7 +62,6 @@
 
   @media screen and (min-width: 768px) {
     display: flex;
-    justify-content: space-between;
     align-items: center;
   }
 }
