--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -33,9 +33,33 @@
   }
 }
 
+.nav__contacts {
+  @media screen and (min-width: 768px) {
+    margin-left: 90px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-left: 315px;
+  }
+}
+
 .contacts__icon {
   @media screen and (max-width: 767px) {
     display: none;
+  }
+
+  @media screen and (max-width: 1199px) {
+    margin-right: 8px;
+
+    &--mail {
+      width: 14px;
+      height: 10px;
+    }
+
+    &--tel {
+      width: 10px;
+      height: 14px;
+    }
   }
 }
 
@@ -87,6 +111,11 @@
       font-weight: 500;
       letter-spacing: 0.68px;
     }
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    font-size: 12px;
+    letter-spacing: 0.24px;
   }
 }
 
