--- a/sass/components/modal-form/_modal.scss
+++ b/sass/components/modal-form/_modal.scss
@@ -5,7 +5,6 @@
   width: 100vw;
   height: 100%;
   padding: 0 15px;
-  // padding: 93px 15px 15px;
   overflow-y: scroll;
 
   opacity: 1;
@@ -29,34 +28,32 @@
 
   background-color: var(--primary-white-color);
 
+  transform: translatex(-50%);
   transition: transform 250ms var(--timing-function);
 
-  @media screen and (min-width: 360px) {
-    left: 0;
+  @media screen and (min-width: 320px) {
+    left: 50%;
     width: 99%;
-    top: 73px;
+    top: 93px;
   }
 
   @media screen and (min-width: 480px) {
     position: absolute;
-    top: 145px;
+    top: 93px;
     left: 50%;
     width: 100%;
     max-width: 450px;
-
-    transform: translate(-50%, -50px);
   }
 
   @media screen and (min-width: 768px) {
-    top: 293px;
+    top: 208px;
   }
 
   @media screen and (min-width: 1200px) {
     left: 50%;
-    top: 273px;
+    top: 221px;
     width: 100%;
     max-width: 528px;
-    transform: translate(-50%, -50px);
   }
 }
 
