--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -9,7 +9,7 @@
       padding-top: 118px;
       padding-bottom: 118px;
     }
-    @include mq(desctop) {
+    @media screen and (min-width: 1200px) {
       padding-top: 200px;
       padding-bottom: 200px;
     }
@@ -28,7 +28,7 @@
       letter-spacing: 1.56px;
     }
 
-    @include mq(desctop) {
+    @media screen and (min-width: 1200px) {
       width: 696px;
       margin-bottom: 30px;
       margin-left: auto;
@@ -45,9 +45,6 @@
 
 .overlay {
   position: relative;
-  // max-width: 1600px;
-  // height: 600px;
-
   max-width: 1600px;
   height: 400px;
   background-repeat: no-repeat;
